# weather_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
tests/: conftest.py
tests/integration/: test_weather_route.py
tests/system/: test_weather_e2e.py
tests/unit/: test_weather_client.py  test_weather_service.py
weather_api/: config.py  dependencies.py  main.py
weather_api/api/: __init__.py  weather_routes.py
weather_api/cache/: redis_cache.py
weather_api/event_logging/: __init__.py  base.py  dinamodb_logger.py  sqlite_logger.py
weather_api/providers/: __init__.py  open_weather_client.py
weather_api/services/: weather_service.py
weather_api/storage/: __init__.py  base.py  minio_storage.py  s3_storage.py
