[project]
name = "weather-api"
version = "0.1.0"
description = "Weather API Demo Project"
authors = [{ name = "Irakli Sivsivadze <iraklisivsivadze@gmail.com>" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=7.2.0,<8.0.0)",
    "boto3 (>=1.42.52,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
